# HSBencher

./: .build_tests.sh  .gitignore  .gitmodules  .jenkins_script.sh  .jenkins_script_cabal.sh  .run_tests.sh  .travis.yml  DEVLOG.md  DEVLOG.txt  HSBencher.hs  README.md  TODO.md  Test.hs  example  hsbencher.cabal  set_sandboxes.sh  shell.nix  stack-lts-2.22.yaml  stack-lts.yaml  stack-nightly.yaml  stack.yaml
HSBencher/: App.hs  Config.hs  Fusion.hs  Logging.hs  MeasureProcess.hs  Methods.hs  Types.hs  Utils.hs
analyze/: DatfileHelpers.hs  ScriptHelpers.hs  plot_ALL.hs  plot_jmacro.hs  plot_scaling.hs  test_HJScript.hs
bench/: benchmark.hs  clusterbench.hs  file_away.hs  ntimes  ntimes_minmedmax  timeout.hs  timeout.sh
cat-csv/: FiltCSV.hs  LICENSE  Main.hs  csv-tools.cabal  stack.yaml
example/: Makefile  benchlist.txt  example.hs
example/cabal/: benchmark.hs  runit_fusionupload.sh
example/cabal/bench1/: Hello.hs  bench1.cabal
example/make_and_ghc/: benchmark.hs  runit.sh
example/make_and_ghc/bench1/: Makefile
example/old/: Makefile  README  example.hs
hsbencher/: HSBencher.hs  Main.hs  Test.hs  hsbencher.cabal
hsbencher-analytics/: LICENSE  README.md  hsbencher-analytics.cabal
hsbencher-analytics/HSBencher/: Analytics.hs
hsbencher-analytics/examples/fusion-analytics/: fusion_analytics.cabal  plot.hs
hsbencher-analytics/examples/fusion-analytics/Bench/: Bench.cabal
hsbencher-codespeed/: hsbencher-codespeed.cabal
hsbencher-codespeed/HSBencher/Backend/: Codespeed.hs
hsbencher-codespeed/example/: codespeed-example.cabal  run_benchmark.hs
hsbencher-csv/: Main.hs  hsbencher-csv.cabal
hsbencher-fusion/: LICENSE  hsbencher-fusion.cabal
hsbencher-fusion/CSVUploader/: Main.hs
hsbencher-fusion/CriterionUploader/: Main.hs
hsbencher-fusion/HSBencher/Backend/: Fusion.hs
hsbencher-fusion/HSBencher/Internal/: Fusion.hs
hsbencher-fusion/examples/fusion_backend/: fusion_backend.cabal
hsbencher-fusion/examples/fusion_backend/Bench/: Bench.cabal
hsbencher-fusion/examples/lowlevel_fusion/: lowlevel_fusion.cabal
hsbencher-graph/: Main.hs  hsbencher-graph.cabal  template.gpl
hsbencher-graph/example/: Makefile  renames.txt  run_example.sh  snowball-list.csv  snowball-template.gpl  template_both.gpl  template_single.gpl
hsbencher-graph/tests/: Makefile  get-latest.csv
hsbencher-tool/: Main.hs  hsbencher-tool.cabal
hsbencher/HSBencher/: App.hs  Config.hs  Harvesters.hs  Logging.hs  MeasureProcess.hs  Methods.hs  Types.hs  Utils.hs
hsbencher/HSBencher/Backend/: Dribble.hs
hsbencher/HSBencher/Internal/: App.hs  BenchSpace.hs  Config.hs  Logging.hs  MeasureProcess.hs  Methods.hs  Utils.hs
hsbencher/HSBencher/Methods/: Builtin.hs
hsbencher/app/: IngestLog.hs
hsbencher/example/cabal/: benchmark.cabal  benchmark.hs
hsbencher/example/compiletime_env/: benchmark.hs
hsbencher/example/custom_tag/: custom-tag.cabal  run_benchmark.hs
hsbencher/example/custom_tag/Bench/: Bench.hs
hsbencher/example/fusion-analytics/: fusion_analytics.cabal  plot.hs  run_benchmark.hs
hsbencher/example/fusion-analytics/Bench/: Bench.hs
hsbencher/example/fusion_backend/: fusion_backend.cabal  run_benchmark.hs
hsbencher/example/fusion_backend/Bench/: Bench.hs
hsbencher/example/lowlevel_fusion/: lowlevel_fusion.cabal  lowlevel_fusion.hs
hsbencher/example/make_and_ghc/: benchmark.hs
hsbencher/example/make_and_ghc/bench1/: Makefile  hello.c
hsbencher/example/retries/: benchmark.cabal  benchmark.hs
hsbencher/example/retries/bench1/: Makefile
hsbencher/src/HSBencher/: Harvesters.hs  Types.hs
hsbencher/src/HSBencher/Backend/: Dribble.hs
hsbencher/src/HSBencher/Internal/: App.hs  Config.hs  MeasureProcess.hs  Utils.hs
hsbencher/src/HSBencher/Methods/: Builtin.hs
hsbencher/tests/: Test.hs
old/hsbencher-analytics/: hsbencher-analytics.cabal
old/hsbencher-analytics/HSBencher/: Analytics.hs
old/hsbencher-csv/: hsbencher-csv.cabal
