
name:                hsbencher
version:             0.1.1
-- CHANGELOG:
-- __ : Initial release

synopsis:  Flexible benchmark runner for Haskell and non-Haskell benchmarks.
-- description:         

license:             BSD3
license-file:        LICENSE
author:              Ryan Newton
maintainer:          rrnewton@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

Flag fusion
  description:
      Add support for Google Fusion Table upload of benchmark data.
  default: False  


Library 
  exposed-modules: HSBencher.MeasureProcess
                   HSBencher.App
                   HSBencher.Types
                   HSBencher.Logging
                   HSBencher.Methods
                   HSBencher.Utils
  build-depends:   
      -- base ==4.6.*, bytestring ==0.10.*, process ==1.1.*, directory ==1.2.*, filepath ==1.3.*, random ==1.0.*, 
      -- unix ==2.6.*, containers ==0.5.*, time ==1.4.*, mtl ==2.1.*, async >= 2.0,
      base >= 4.5, bytestring, process, directory, filepath, random, unix, containers, time, mtl, async, 
      hydra-print >= 0.1.0.3, io-streams >= 1.0      
  default-language:    Haskell2010

Executable hsbencher
  main-is: Main.hs
  -- other-modules:       
  build-depends:
      -- <DUPLICATED from above>
      base >= 4.5, bytestring, process, directory, filepath, random, unix, containers, time, mtl, async, 
      hydra-print >= 0.1.0.3, io-streams >= 1.0      
      -- </DUPLICATED>

  ghc-options: -threaded 

  if flag(fusion) {
    build-depends: handa-gdata >= 0.6.2
    cpp-options: -DFUSION_TABLES
  }
  default-language:    Haskell2010
