
name:                hsbencher-fusion-fetch
version:             0.1.1
synopsis:            Command line tool for fetching HSBencher data. 
description:
  Once benchmark data is uploaded to a backend, it is necessary
  to retrieve it in order to analyze and plot it.  This command 
  is currently specific to the fusion table backend and allows 
  querying it with SQL expressions.

license:             MIT
-- license-file:        LICENSE
author:              Ryan Newton, Joel Svensson
maintainer:          rrnewton@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

-- The hsbencher command line tool:
executable hsbencher-fusion-fetch
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: base >=4.5 && < 4.8
               , hsbencher >= 1.8.0.13
               , hsbencher-fusion >= 0.1.0.3 
               , simple-sql-parser >= 0.4.0 && < 0.5
               , split 
               , MissingH >= 1.2.1.0 && < 1.3
