name:                benchmark
version:             0.1.0.0
author:              Joel Svensson
maintainer:          svenssonjoel@yahoo.se
category:            Testing
build-type:          Simple

cabal-version:       >=1.10

executable benchmark
  main-is:             benchmark.hs
  build-depends:       base >=4.6,
                       directory,
                       hsbencher >= 1.8.0.2 
  default-language:    Haskell2010
