name:                benchmark
version:             0.1.0.0
category:            Testing
build-type:          Simple

cabal-version:       >=1.10

executable hsbencher-retries-example
  main-is:             benchmark.hs
  build-depends:       base >=4.6,
                       directory, data-default,
                       hsbencher >= 1.13
  default-language:    Haskell2010
